# mshauri

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  init.sh  pyproject.toml
config/: __init__.py
migrations/versions/: c745a0c48219_made_names_unique_in_cme_and_drill.py  d3ed12366589_changed_foreign_key_null_constraints.py  f77e259be82f_initial_migration.py
mshauri/: __init__.py  api-docs.yml  commands.py  extensions.py
mshauri/controllers/: __init__.py  api-docs.yml
mshauri/dataset/: data.xlsx
mshauri/models/: __init__.py  mixins.py
mshauri/transformer/: __init__.py  transformer.py
tests/: conftest.py  test_api.py  test_data.xlsx  test_models.py  test_transformer.py
